Add web dashboard for management (#42)
